# openemr-base-clean

./: .claudeignore  .gitignore  .gitlab-ci.yml  .railwayignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  PRD.md  README.md  USER.md  architecture-defense.pptx  railway.json
copilot/: .dockerignore  .gitignore  COST_ANALYSIS.md  Dockerfile  OBSERVABILITY.md  README.md  WALKTHROUGH.md  WEEK2_DEMO.md  pyproject.toml  railway.json  requirements.txt
copilot/api-collection/: ask-grounded.bru  ask-safe-refusal.bru  auth-pkce-config.bru  bruno.json  chat-unauthorized.bru  chat-verified.bru  clinical-copilot.bru.md  documents-intake.bru  documents-lab.bru  health.bru  ready.bru
copilot/app/: __init__.py  ask.py  audit.py  auth_pkce.py  chat.py  config.py  demo_token.py  dependencies.py  langfuse_export.py  main.py  metrics.py  middleware.py  observability.py  orchestrator.py  routes.py  scope.py  sessions.py  verifier.py  wiring.py
copilot/evals/: README.md  RESULTS.md  cases.json  live.py  live_cases.json  run.py
copilot/fixtures/: make_sample_lab.py
copilot/loadtest/: RESULTS-chat.md  RESULTS.md  run.py
copilot/rules/: clinical_rules.json
copilot/static/: dashboard.html  documents.html  index.html
copilot/tests/: conftest.py  test_ask_endpoint.py  test_audit_trail.py  test_auth_pkce.py  test_chart_tools.py  test_chat_endpoint.py  test_critic.py  test_demo_token.py  test_document_extractor.py  test_document_ingest.py  test_document_schemas.py  test_documents_endpoint.py  test_fhir_client.py  test_graph.py  test_intake_form.py  test_langfuse_export.py  test_loadtest.py  (+12 more)
(+35 files in other folders)
