[project]
name = "clinical-copilot-sidecar"
version = "0.1.0"
description = "AgentForge Clinical Co-Pilot — FastAPI sidecar for OpenEMR"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "httpx>=0.27",        # required by fastapi.testclient
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
